fix(table): add text alignment for table headers and cells based on alignment attributes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -156,6 +156,21 @@ td {
     text-align: left;
 }
 
+th[align="left"],
+td[align="left"] {
+    text-align: left;
+}
+
+th[align="center"],
+td[align="center"] {
+    text-align: center;
+}
+
+th[align="right"],
+td[align="right"] {
+    text-align: right;
+}
+
 thead {
     /* Set header row background color */
     background-color: var(--gray-200);
